# Plat-Engine

./: .coderabbit.yml  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
.github/: pull_request_template.md
.github/workflows/: cmake_build.yml
editor/: CMakeLists.txt
editor/include/: Editor.hpp
editor/src/: Editor.cpp  Main.cpp
engine/: CMakeLists.txt  README.md
engine/include/: Engine.hpp
engine/include/ECS/: Animation.hpp  Audio.hpp  Camera.hpp  Name.hpp  Scene.hpp  Script.hpp  Velocity.hpp
engine/include/ECS/systems/: PhysicsSystem.hpp  RenderSystem.hpp
engine/include/logger/: Logger.hpp  SpdlogLogger.hpp
engine/src/: Engine.cpp  Platform.cpp
engine/src/ECS/: ECS.cpp  Scene.cpp
engine/src/ECS/systems/: PhysicsSystem.cpp  RenderSystem.cpp
engine/src/logger/: LoggerFactory.h
game/: CMakeLists.txt
game/src/: Main.cpp
include/ECS/: AssetManager.hpp  Camera.hpp  Collider.hpp  ECS.hpp  EntityManager.hpp  Event.hpp  Input.hpp  PhysicsBody.hpp  Position.hpp  Scene.hpp  Sprite.hpp  Transform.hpp
include/ECS/systems/: InputSystem.hpp  PhysicsSystem.hpp
src/: Main.cpp
src/ECS/: AssetManager.cpp  ECS.cpp  EntityManager.cpp  Scene.cpp
src/ECS/systems/: InputSystem.cpp  RenderSystem.cpp
